[gd_scene format=3 uid="uid://bge0ssf1kk4xt"]

[ext_resource type="Script" uid="uid://dimk3acq356qu" path="res://test_level.gd" id="1_f7g2b"]
[ext_resource type="PackedScene" uid="uid://c1031ps30bjdd" path="res://player.tscn" id="2_4ptq8"]
[ext_resource type="PackedScene" uid="uid://f3boarrjcb5t" path="res://enemy.tscn" id="3_sb12i"]

[node name="TestLevel" type="Node2D" unique_id=1734630317]
script = ExtResource("1_f7g2b")
player_scene = ExtResource("2_4ptq8")
enemy_scene = ExtResource("3_sb12i")

[node name="PlayerSpawn" type="Marker2D" parent="." unique_id=286454880]
position = Vector2(100, 100)

[node name="EnemySpawn" type="Marker2D" parent="." unique_id=1233947946]
position = Vector2(300, 300)

[node name="BulletContainer_Player" type="Node2D" parent="." unique_id=1923067959]

[node name="BulletContainer_Enemy" type="Node2D" parent="." unique_id=988938208]

[node name="EnemyContainer" type="Node2D" parent="." unique_id=1672553055]
